# stm32_tests

./: .gitignore  README.md
stm32h750b-dk-mb1381/board-cad/MB1381B/Altium_Designer/: Arduino_Connector.kicad_sch  Audio.kicad_sch  Ethernet.kicad_sch  FDCAN.kicad_sch  HW_Mechanical_Parts.kicad_sch  LCD4.3.Harness  LCD4.3.kicad_sch  MB1381.OutJob  MB1381.kicad_prl  MB1381.kicad_pro  MB1381.kicad_sch  PoE.kicad_sch  QSPI.kicad_sch  SDRAM.kicad_sch  STM32_microcontroller_IOs.SchDoc  STM32_microcontroller_IOs.kicad_sch  STM32_microcontroller_Power.SchDoc  STM32_microcontroller_Power.kicad_sch  STMod+.kicad_sch  STlink_V3E_Module.kicad_sch  STlink_V3E_PWR.kicad_sch  TAG.kicad_sch  TOP.kicad_sch  USB_OTG_FS.kicad_sch  eMMC.Harness  eMMC.kicad_sch
stm32h750b-dk-mb1381/board-cad/mb1381-bdp/: readme.txt
stm32h750b-dk-mb1381/board-cad/mb1381-bdp/MB1381B/Altium_Designer/: Audio.Harness  MB1381.PrjPcb  QSPI.Harness  SDRAM.Harness  STM32_microcontroller_IOs.Harness
stm32h750b-dk-mb1381/board-cad/mb1381-bom/: MB1381-H745XI-B01_BOM.xlsx  MB1381-H745XI-B02_BOM.xlsx  MB1381-H745XI-B03_BOM.xlsx  MB1381-H745XI-B04_BOM.xlsx  MB1381-H750XB-B01_BOM.xlsx  MB1381-H750XB-B04_BOM.xlsx  readme.txt
stm32h750b-dk-mb1381/board-cad/mb1381-manufacturing/: readme.txt
stm32h750b-dk-mb1381/board-cad/mb1381-manufacturing/MB1381B/Assembly/: MB1381-B01.GBP  MB1381-B01.GTP  MB1381-B01.apr  MB1381-B01_PickandPlace.txt
stm32h750b-dk-mb1381/board-cad/mb1381-manufacturing/MB1381B/Gerber/: MB1381B-RoundHoles-NonPlated.TXT  MB1381B-RoundHoles-Plated.TXT  MB1381B-SlotHoles-NonPlated.TXT  MB1381B-SlotHoles-Plated.TXT  MB1381B-macro.APR_LIB  MB1381B.DRR  MB1381B.G1  MB1381B.G2  MB1381B.G3  MB1381B.G4  MB1381B.GBL  MB1381B.GBO  MB1381B.GBP  MB1381B.GBS  MB1381B.GD1  MB1381B.GG1  MB1381B.GM1  MB1381B.GTL  MB1381B.GTO  MB1381B.GTP  MB1381B.GTS  MB1381B.LDP  MB1381B.apr
stm32h750b-dk-mb1381/board-cad/mb1381-manufacturing/MB1381B/ODB++/: MB1381B.tgz
stm32h750b-dk-mb1381/docs/: qspi_xip_zephyr_notes.md
stm32h750b-dk-mb1381/hal-freertos-lvgl/: CMakeLists.txt  CMakePresets.json  README.md  docs-architecture.md  lv_conf.h  openocd.cfg  stm32h750xb_flash.ld  stm32h750xb_flash.ld.in
stm32h750b-dk-mb1381/hal-freertos-lvgl/Inc/: FreeRTOSConfig.h  app_log.h  can_init.h  log_uart.h  ltdc_init.h  lvgl_mem_pool.h  lvgl_port.h  main.h  qspi_init.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  ui.h
stm32h750b-dk-mb1381/hal-freertos-lvgl/Src/: app_log.c  can_init.c  freertos_static_alloc.c  log_uart.c  ltdc_init.c  lvgl_mem_pool.c  lvgl_port.c  main.c  qspi_init.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  ui.c
stm32h750b-dk-mb1381/hal-freertos-lvgl/patches/: 0001-fix-dma2d-wait_finish_cb-deadlock-when-idle.patch  0002-perf-ltdc-immediate-reload-no-vsync-wait.patch
stm32h750b-dk-mb1381/hal-freertos-lvgl/tools/: flash.py  hardfault_capture.sh
